# Hackaton

./: db.sqlite3  requirements.txt
API/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  0002_contractors_remove_review_image_alter_review_rating_and_more.py  0003_alter_user_phone_number.py  0003_delete_profile_delete_review.py  0004_remove_streets_contractor_delete_contractors_and_more.py
chat/: serializers.py  urls.py  views.py
drf/: settings.py  urls.py
main/: db.sqlite3  pyproject.toml
main/blog/: models.py  serializers.py  urls.py  views.py
main/blog/migrations/: 0001_initial.py  0002_product_delete_blog.py  0003_review_delete_product.py  0004_remove_review_author.py  0005_alter_review_image.py
main/main/: settings.py
